# libvterm

./: .gitignore  CMakeLists.txt  vterm.pc.in
src/: screen.c  state.c
t/: CMakeLists.txt  run-test.pl
